--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,372 @@
-/* место для вашего кода */
+/* ----------------------------- header -------------------------------------------- */
+.header {
+  padding: 92px 50px 96px 50px;
+
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  grid-template-rows: 100%;
+  align-items: center;
+
+  font-size: 18px;
+}
+
+.header__links-list {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 32px;
+
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__logo-image {
+  display: block;
+
+  width: 148px;
+  height: 105px;
+}
+
+.header__address {
+  /* без этого паддина pp не получается */
+  padding-right: 36px;
+
+  justify-self: end;
+}
+
+/* ------------------ конец блока header ------------------------------------------ */
+
+/* ------------------------------- cover ------------------------------------------- */
+.cover {
+  position: relative;
+
+  max-height: 757px;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.cover__title {
+  padding: 165px 50px 0;
+
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 115%;
+  text-transform: uppercase;
+  color: #fff;
+
+  z-index: 2;
+}
+
+.aligned-text {
+  display: block;
+  padding-bottom: 20px;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 0.3em;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0em;
+}
+
+.cover__description {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  z-index: 2;
+
+  padding: 88px 50px 50px 50px;
+}
+
+.cover__description-text {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 127%;
+  text-transform: uppercase;
+  color: #fff;
+
+  word-spacing: 18px;
+}
+
+.bet-button {
+  padding: 12px 32px 11px 31px;
+
+  cursor: pointer;
+
+  font-weight: 500;
+  font-size: 22px;
+  text-transform: uppercase;
+  color: #fff;
+
+  border: 1px solid #fff;
+  background: transparent;
+}
+
+/* --------------------------- конец блока cover --------------------------- */
+
+/* --------------------------- lots ---------------------------------------- */
+.lots {
+  margin-top: 180px;
+}
+
+.lots__heading {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+
+  padding-left: 64px;
+
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  margin-top: 27px;
+  margin-bottom: 30px;
+  padding: 0 24px;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 100%;
+  gap: 25px;
+
+  list-style: none;
+}
+
+.lots__card-list-item {
+  min-height: 596px;
+
+  position: relative;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  position: relative;
+}
+
+.card__title {
+  padding: 48px 40px 0;
+
+  z-index: 2;
+
+  cursor: pointer;
+
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.card__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  color: #fff;
+
+  padding: 0 40px 48px;
+
+  z-index: 2;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.lots__look-more-link {
+  text-decoration: none;
+
+  padding-left: 64px;
+
+  font-weight: 400;
+  font-size: 20px;
+}
+
+/* ------------------------------ конец блока lots ---------------------------- */
+
+/* -------------------------------- about ------------------------------------- */
+.about {
+  margin-top: 120px;
+  padding: 0 24px;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 100%;
+}
+
+.about__black-circle {
+  border-radius: 100%;
+  background-color: black;
+
+  margin-top: 35px;
+  margin-left: 47px;
+
+  width: 240px;
+  height: 240px;
+
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about__logo-image {
+  background-image: url(../images/logo-white.svg);
+
+  position: absolute;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  width: 62%;
+  height: 48%;
+
+  z-index: 1;
+}
+
+.about__content {
+  grid-column: 2 / span 2;
+
+  margin-top: 136px;
+  padding-left: 8px;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  margin-top: 100px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+}
+
+/* -------------------------- конец блока about --------------------------------- */
+
+/* -------------------------- footer ------------------------------------------- */
+
+.footer {
+  margin-top: 180px;
+  margin-bottom: 82px;
+
+  padding: 0 50px;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.footer__menu {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+
+  padding-top: 2px;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+
+  text-align: center;
+
+  list-style: none;
+
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.footer__links{
+  display: flex;
+  justify-content: end;
+  gap: 48px;
+  flex-wrap: wrap;
+
+  list-style: none;
+
+  cursor: pointer;
+}
+
+.footer__social-icon{
+  max-height: 48px;
+}
+
+/* ------------------------------------- общие классы ------------------------------ */
+.address {
+  display: flex;
+  flex-direction: column;
+  font-style: normal;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 135%;
+  color: #000;
+}
+
+.address a {
+  text-decoration: none;
+}
+
+.overlay {
+  position: absolute;
+
+  width: 100%;
+  height: 100%;
+
+  z-index: 1;
+
+  background-color: black;
+  opacity: 0.6;
+}
+
+.accent-underline {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+
+  cursor: pointer;
+}
